--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
     docker:
       - image: circleci/openjdk:8-jdk
 
+    working_directory: ~/comfreeNowapitest/
     steps:
       - checkout
       # run tests!
