--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     docker:
       - image: circleci/openjdk:8-jdk
 
-    working_directory: ~/comfreeNowapitest/
+    working_directory: /Users/aaibedul/eclipse-workspace/testChallenge/comfreeNowapitest/
     steps:
       - checkout
       # run tests!
