--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - checkout
 
+      - run pwd
       # Download and cache dependencies
       - restore_cache:
           keys:
@@ -19,7 +20,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - comfreeNowapitest-
 
-      - run: cd /testChallenge/comfreeNowapitest; mvn dependency:go-offline
+      - run: pwd; cd /testChallenge/comfreeNowapitest; mvn dependency:go-offline
 
       - save_cache:
           paths:
